--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=1234
 spring.jpa.show.sql=true
 spring.jpa.database=mysql
 openWeathermap.key=38c1a7e931bc50f8a81937ca4dee1d67
+logging.config=classpath:logback-spring.xml
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
